# prompt-preflight

./: .gitignore  .prompt-preflight.example.json  README.md  fix_analyzer_bugs.py  fix_circular.py  fix_syntax.py  fix_syntax2.py  fix_syntax3.py  patch_analyzer.py  patch_decision.py  patch_early_returns.py  patch_hooks.py  patch_readme.py  pyproject.toml  rewrite_analyzer.py  test_analyzer_logic.py
.codex-plugin/: plugin.json
.github/workflows/: benchmark.yml
docs/: CLAUDE.md  EXAMPLES.md  KIRO.md  SETUP.md  TEMPLATES.md
docs/snippets/: README.md  data_analysis.md  research.md  software.md
hooks/: hooks.json
scripts/: benchmark_vague_prompts.py  generate_template_docs.py  install_claude_plugin.py  install_codex_plugin.py  install_kiro_hook.py  prompt_preflight.py  prompt_preflight_hook.py
skills/prompt-preflight/: SKILL.md
src/prompt_preflight/: __init__.py  analyzer.py  claude_hook.py  cli.py  config.py  hook.py  kiro_hook.py  telemetry.py  vague_prompt_library.py
src/prompt_preflight/data/: vague_prompts.txt
tests/: test_analyzer.py  test_benchmark_vague_prompts.py  test_generate_template_docs.py  test_installer.py  test_privacy.py  test_telemetry.py  test_writing_research_calibration.py
